refactorisation fonctions single_cmd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"makefile.configureOnOpen": false
+	"makefile.configureOnOpen": false,
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false
 }
